tests/snapshots/golden_csharp__csharp_auth_manager_cs_single_basic_scheme.snap
---
source: tests/golden_csharp.rs
expression: contents
---
using System.Text.Json;
using Microsoft.Extensions.DependencyInjection;
using Microsoft.Extensions.Options;
using Out.Auth.Strategies;
using Out.Core;

namespace Out.Auth;

/// <summary>
/// Selects exactly one active auth strategy per deployment, chosen via
/// the <see cref="AuthMethod"/> config value (REQ-1.2.3) — there is no
/// runtime engine for resolving multiple simultaneously-required schemes.
/// The active strategy is resolved through .NET 8+ keyed DI
/// (<see cref="IKeyedServiceProvider"/>), keyed by the
/// <see cref="AuthMethod"/> enum value itself — investigated per
/// v4-implementation-plan.md's C4 goal text and confirmed to map onto
/// "select one active strategy by a config-driven key" more directly than
/// a hand-rolled dictionary/switch would.
/// </summary>
public sealed class AuthManager(
    IOptions<McpifyOptions> options,
    IKeyedServiceProvider keyedServiceProvider,
    ICredentialStore credentialStore)
{
    /// <summary>
    /// The single credential-store key this project ever writes to or
    /// reads from — this target generates one MCP server per one API
    /// spec, so there's exactly one relevant "credential slot". Public so
    /// <c>Cli/SetupWizard.cs</c> and <c>Cli/Roles.cs</c>'s `config`
    /// command (checking whether a credential is saved, without
    /// exposing it) share this one literal instead of each re-typing it.
    /// </summary>
    public const string CredentialKey = "active-credentials";
    private Dictionary<string, string>? _cachedCredentials;

    private IAuthStrategy Strategy =>
        keyedServiceProvider.GetRequiredKeyedService<IAuthStrategy>(options.Value.AuthMethod);

    /// <summary>
    /// Where each discovered auth method's credential value travels on
    /// the wire — used only by the HTTP-transport auth-gate/extractor
    /// (<c>Http/AuthExtractor.cs</c>) to know which incoming header to
    /// read; stdio never calls this.
    /// </summary>
    private static readonly Dictionary<AuthMethod, (string Location, string Name)> HeaderLocations = new()
    {
        [AuthMethod.Basic] = ("header", "Authorization"),
    };

    public static (string Location, string Name) HeaderLocationFor(AuthMethod authMethod) =>
        HeaderLocations.TryGetValue(authMethod, out var location) ? location : ("none", string.Empty);

    public async Task<Dictionary<string, string>> LoginAsync(
        Dictionary<string, string> config, CancellationToken cancellationToken = default)
    {
        var credentials = await Strategy.AuthenticateAsync(config, cancellationToken);
        _cachedCredentials = credentials;
        await credentialStore.SaveAsync(CredentialKey, JsonSerializer.Serialize(credentials), cancellationToken);
        return credentials;
    }

    /// <summary>
    /// Seeds in-memory credentials directly, bypassing OS-keychain/file
    /// storage entirely — for tests (which must never touch the real
    /// credential store as a side effect of running) and for callers that
    /// already hold validated credentials from elsewhere.
    /// </summary>
    public void SetCredentials(Dictionary<string, string> credentials) => _cachedCredentials = credentials;

    public async Task<Dictionary<string, string>> GetCredentialsAsync(CancellationToken cancellationToken = default)
    {
        if (_cachedCredentials is not null && Strategy.ValidateCredentials(_cachedCredentials))
        {
            return await NormalizeCredentialsAsync(_cachedCredentials, cancellationToken);
        }

        var envConfig = ReadEnvCredentialOverrides(options.Value.AuthMethod);
        if (envConfig is not null)
        {
            var authenticated = await Strategy.AuthenticateAsync(envConfig, cancellationToken);
            var normalizedFromEnv = await NormalizeCredentialsAsync(authenticated, cancellationToken);
            _cachedCredentials = normalizedFromEnv;
            return normalizedFromEnv;
        }

        var stored = await credentialStore.GetAsync(CredentialKey, cancellationToken);
        if (stored is not null)
        {
            var parsed = JsonSerializer.Deserialize<Dictionary<string, string>>(stored) ?? [];
            if (Strategy.ValidateCredentials(parsed))
            {
                var normalized = await NormalizeCredentialsAsync(parsed, cancellationToken);
                _cachedCredentials = normalized;
                await credentialStore.SaveAsync(CredentialKey, JsonSerializer.Serialize(normalized), cancellationToken);
                return normalized;
            }

            try
            {
                // A blob with a refresh token has completed the initial
                // exchange at some point (it just expired) — use the
                // cheap refresh path. A blob with neither a valid access
                // token nor a refresh token is straight out of the setup
                // wizard (a raw authorization_code, never exchanged yet),
                // so fall through to the full exchange instead of giving
                // up.
                Dictionary<string, string> exchanged;
                try
                {
                    exchanged = await Strategy.RefreshTokenAsync(parsed, cancellationToken);
                }
                catch
                {
                    exchanged = await Strategy.AuthenticateAsync(parsed, cancellationToken);
                }
                var normalized = await NormalizeCredentialsAsync(exchanged, cancellationToken);
                _cachedCredentials = normalized;
                await credentialStore.SaveAsync(CredentialKey, JsonSerializer.Serialize(normalized), cancellationToken);
                return normalized;
            }
            catch
            {
                // Fall through to NoActiveCredentialsException below —
                // matches `targets::python`'s auth_manager.py: both the
                // refresh and the full exchange failed.
            }
        }

        throw new NoActiveCredentialsException(options.Value.AuthMethod.ToString());
    }

    /// <summary>
    /// Reads the raw-auth-config env vars documented in
    /// <c>.env.example</c> (<c>OUT_TOKEN</c>/<c>_API_KEY</c>
    /// for <c>pat</c>/<c>apiKey</c>, <c>OUT_USERNAME</c>
    /// + <c>_PASSWORD</c> for <c>basic</c>) for whichever auth method is
    /// currently active, keyed to the shape each strategy's
    /// <c>AuthenticateAsync</c> expects. Returns <c>null</c> when the
    /// active method has no env-var override support, or when the
    /// relevant var(s) aren't set — in which case
    /// <see cref="GetCredentialsAsync"/> falls back to the stored
    /// credential lookup as before.
    /// </summary>
    private static Dictionary<string, string>? ReadEnvCredentialOverrides(AuthMethod authMethod)
    {
        switch (authMethod)
        {
            case AuthMethod.Basic:
            {
                var username = Environment.GetEnvironmentVariable("OUT_USERNAME");
                var password = Environment.GetEnvironmentVariable("OUT_PASSWORD");
                return string.IsNullOrEmpty(username) || string.IsNullOrEmpty(password)
                    ? null
                    : new Dictionary<string, string> { ["username"] = username, ["password"] = password };
            }
            default:
                return null;
        }
    }

    private async Task<Dictionary<string, string>> NormalizeCredentialsAsync(
        Dictionary<string, string> credentials,
        CancellationToken cancellationToken)
    {
        if (credentials.ContainsKey("authorization_header") ||
            credentials.ContainsKey("api_key") ||
            credentials.ContainsKey("request_header_name"))
        {
            return new Dictionary<string, string>(credentials);
        }

        if (credentials.TryGetValue("access_token", out var accessToken))
        {
            var normalized = new Dictionary<string, string>(credentials)
            {
                ["authorization_header"] = $"Bearer {accessToken}",
            };
            return normalized;
        }

        return await Strategy.AuthenticateAsync(credentials, cancellationToken);
    }

    /// <summary>
    /// Decorates outgoing request headers with credentials for
    /// <paramref name="transport"/>: on <see cref="Transport.Http"/>,
    /// <paramref name="requestOverride"/> (extracted per-request from the
    /// caller's own headers — see
    /// <c>Http/RequestCredentialProvider.cs</c>) is the *only* source
    /// ever consulted, since HTTP deployments must never leak the
    /// operator's local config/keychain secrets to a caller who didn't
    /// supply their own; a null override is a hard error, not a
    /// fallback. On <see cref="Transport.Stdio"/>,
    /// <paramref name="requestOverride"/> is ignored and behavior is
    /// unchanged from before HTTP-transport support existed:
    /// <see cref="GetCredentialsAsync"/> (config cascade + keychain).
    ///
    /// API-key placement uses the scheme's real configured header name —
    /// carried on the credentials dictionary as <c>api_key_header_name</c>
    /// by <see cref="Strategies.ApiKeyAuthStrategy"/> — falling back to an
    /// <c>X-Api-Key</c> header only when no such header name was
    /// configured. <paramref name="requestOverride"/>'s
    /// <c>request_header_name</c>/<c>request_header_value</c> pair is a
    /// separate, HTTP-transport-only path, since that override already
    /// knows the scheme's declared header name at generation time.
    /// </summary>
    public async Task<Dictionary<string, string>> ApplyAuthHeadersAsync(
        Dictionary<string, string> headers,
        string method,
        string url,
        Transport transport,
        RequestCredentials? requestOverride = null,
        CancellationToken cancellationToken = default)
    {

        Dictionary<string, string> credentials;
        if (transport == Transport.Http)
        {
            if (requestOverride is null)
            {
                throw new AuthException(
                    "no credentials were supplied on this HTTP request; local config/env/keychain is " +
                    "never used as a fallback over HTTP transport");
            }
            credentials = requestOverride.ToCredentialsMap();
        }
        else
        {
            credentials = await GetCredentialsAsync(cancellationToken);
        }

        var updated = new Dictionary<string, string>(headers);
        if (credentials.TryGetValue("request_header_name", out var requestHeaderName))
        {
            updated[requestHeaderName] = credentials.GetValueOrDefault("request_header_value", string.Empty);
        }
        else if (credentials.TryGetValue("authorization_header", out var authHeader))
        {
            updated["Authorization"] = authHeader;
        }
        else if (credentials.TryGetValue("api_key", out var apiKey))
        {
            var headerName = credentials.GetValueOrDefault("api_key_header_name", "X-Api-Key");
            updated[headerName] = apiKey;
        }
        return updated;
    }
}
